# mst-proj

./: .default.env  .dockerignore  .gitignore  .lazy.lua  .nvim.lua  .sqlfluff  Dockerfile  README.md  docker-compose.yml  esp-export.fish  esp-export.sh  esp-idf-path.sh  justfile  pyproject.toml  pyrightconfig.json  rpi-run.sh  rpi-upload-artifact.sh  taskfile.dist.yml  taskfile.idf.yml  taskfile.var.yml
.github/workflows/: docker-image.yml
analysis-src/: issues.csv  top-tags-zig.csv
analyze/: .gitignore  __init__.py  style.mplstyle  taskfile.benchmark.yml  taskfile.lizard.yml  taskfile.plot.yml  top_tags.sql
analyze/benchmark/: bm.py  os.py
analyze/data/: issues.csv  motor-characteristics.csv  so-survey.csv  survey.csv  top-tags-c.csv  top-tags-zig.csv
analyze/lib/: constants.py  experiments.py  plot.py
analyze/notebooks/: survey.html  survey.py  survey.qmd
analyze/plot/: all.py  issues.py  metrics.py  metrics_dyn.py  motor_characteristics.py  so_survey.py  top_tags.py
analyze/utils/: metrics.py
c/: .clang-format  .clangd  .config  CMakeLists.txt  cppcheck-misra.json  dependencies.cmake  justfile  targets.cmake  taskfile.c.yml  toolchain.cmake
c/1-blinky/: CMakeLists.txt  main.c  memory.c  perf.c
c/1-blinky-bm/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults-fast
c/1-blinky-bm/main/: CMakeLists.txt  main.c  memory.c  perf.c  perf.h
c/1-blinky-rm/: main.c  sdkconfig
c/1-blinky-rm/main/: main.c
c/1-hello-world/: CMakeLists.txt  main.c
c/2-motor/: CMakeLists.txt  main.c  memory.c  perf.c  perf.h
c/2-motor-bm/: .clangd  sdkconfig
c/2-motor-bm/main/: CMakeLists.txt  main.c  memory.c
c/2-motor-controller/: CMakeLists.txt  main.c
c/3-pid/: CMakeLists.txt  controller.c  controller.h  main.c  memory.c  memory.h  perf.c  perf.h  pid.c  pid.h  registers.c  registers.h  ringbuffer.c  ringbuffer.h  server.c  server.h  units.h
c/3-pid-bm/: .clangd  CMakeLists.txt  sdkconfig  sdkconfig.defaults
c/3-pid-bm/main/: CMakeLists.txt  Kconfig.projbuild  controller.c  controller.h  idf_component.yml  main.c  memory.c  memory.h  perf.c  perf.h  registers.c  registers.h  ringbuffer.c  ringbuffer.h  server.c  server.h  services.c  services.h  wifi.c  wifi.h
c/dependencies/: i2c-tools.cmake  libgpio.cmake  modbus.cmake  pigpio.cmake  toolchain.cmake
esp-export/: c.sh  rust.sh  zig.sh
notebooks/: survey.qmd
rust/: Cargo.toml  justfile  taskfile.rust.yml
rust/0-tune-bm/: Cargo.toml  modbus.h
rust/0-tune-bm/.cargo/: config.toml
rust/0-tune-bm/src/: controller.rs  main.rs  registers.rs  services.rs
rust/1-blinky/: Cargo.toml
rust/1-blinky-bm/: Cargo.toml
rust/1-blinky-bm/.cargo/: config.toml
rust/1-blinky-bm/src/: main.rs  memory.rs  perf.rs
rust/1-blinky/src/: main.rs  memory.rs  perf.rs
rust/1-hello-world/: Cargo.toml
rust/1-hello-world/src/: main.rs
rust/2-motor/: Cargo.toml
rust/2-motor-bm/: Cargo.toml
rust/2-motor-bm/.cargo/: config.toml
rust/2-motor-bm/src/: main.rs  memory.rs  perf.rs
rust/2-motor-controller/: Cargo.toml
rust/2-motor-controller/src/: main.rs
rust/2-motor/src/: main.rs  memory.rs
rust/3-pid/: Cargo.toml
rust/3-pid-bm/: Cargo.toml  clk.h  sdkconfig.defaults
rust/3-pid-bm/.cargo/: config.toml
rust/3-pid-bm/src/: controller.rs  main.rs  perf.rs  registers.rs  server.rs  services.rs
rust/3-pid/src/: controller.rs  main.rs  memory.rs  perf.rs  pid.rs  registers.rs  server.rs  state.rs
rust/4-dmc/: Cargo.toml
rust/4-dmc/src/: controller.rs  main.rs  server.rs
scripts/: benchmark.py  benchmark_bm.py  metrics.py  plot.py  plot_all.py  plot_issues.py  plot_metrics.py  plot_metrics_dyn.py  plot_motor_characteristics.py  plot_so_survey.py  plot_top_tags.py  survey.qmd  top_tags.sql
scripts/lib/: constants.py  language.py  plot.py  types.py
server/: .dockerignore  .env.example  .nvim.lua  .prettierrc  Dockerfile  justfile  package.json  tailwind.config.cjs  taskfile.server.yml  vite.config.ts
server/src/: app.css  app.html  hooks.server.ts
server/src/lib/: ModbusClient.server.ts  Reading.ts  RingBuffer.ts  color.ts  index.ts  localJsonStorage.ts
server/src/lib/components/: LiveChart.svelte  PidParametersDial.svelte  TuneDials.svelte
server/src/lib/data/: messages.ts
server/src/lib/server/: ModbusClient.ts  index.ts  sse.ts
server/src/lib/ws/: messages.ts
server/src/routes/: +layout.svelte  +page.svelte  +page.ts  Fps.svelte  LiveChart.svelte  PidParameters.svelte  PidParametersDial.svelte
server/src/routes/control/: +page.server.ts  +page.svelte
server/src/routes/sse/: +server.ts
server/src/routes/tune/: +page.server.ts  +page.svelte
server/src/routes/ws/: +server.ts  (+1 more)
zig/: idf-repeat.sh  justfile  taskfile.zig.yml
zig/1-blinky/: build.zig  build.zig.zon  c.zig  main.zig  perf.zig
zig/1-blinky-bm/: CMakeLists.txt  build.zig  build.zig.zon  sdkconfig.defaults-small  wokwi.toml
zig/1-blinky-bm/cmake/: zig-build.cmake
zig/1-blinky-bm/imports/: error.zig  idf-sys.zig
zig/1-blinky-bm/main/: CMakeLists.txt  app.zig  c.zig  memory.zig  perf.zig  utils.zig
zig/1-hello-world/: build.zig  build.zig.zon  main.zig
zig/2-motor/: build.zig  build.zig.zon  c.zig  main.zig  memory.zig  perf.zig
zig/2-motor-bm/: CMakeLists.txt  build.zig  wokwi.toml
zig/2-motor-bm/cmake/: zig-build.cmake
zig/2-motor-bm/imports/: adc.zig  heap.zig  idf.zig
zig/2-motor-bm/main/: CMakeLists.txt  adc.zig  app.zig  c.zig  perf.zig  pwm.zig
zig/2-motor-controller/: build.zig  build.zig.zon  main.zig  pwm.zig
zig/3-pid/: Controller.zig  Registers.zig  Server.zig  build.zig  build.zig.zon  c.zig  main.zig  memory.zig  perf.zig  ring_buffer.zig
zig/3-pid-bm/: CMakeLists.txt  build.zig  build.zig.zon  wokwi.toml
zig/3-pid-bm/cmake/: zig-build.cmake
zig/3-pid-bm/imports/: error.zig  idf-sys.zig  rtos.zig  wifi.zig
zig/3-pid-bm/main/: CMakeLists.txt  Controller.zig  Kconfig.projbuild  Registers.zig  Server.zig  Services.zig  Wifi.zig  adc.zig  app.zig  c.zig  compiler-rt.zig  comptime-rt.zig  idf_component.yml  memory.zig  perf.zig  pwm.zig  ring_buffer.zig  utils.zig
(+2 files in other folders)
