[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyze"
version = "0.1.0"
description = "Scripts and notebooks for benchmarking and plotting"
authors = [{ name = "Jakub Ostrzołek" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipython>=8.12.3",
    "jupyter>=1.1.1",
    "jupytext>=1.17.1",
    "lizard",
    "matplotlib",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pandera>=0.22.1",
    "quarto>=0.1.0",
    "quarto-cli>=1.7.33",
    "rich",
    "scienceplots>=2.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["analyze"]

[dependency-groups]
dev = ["jupyter-client>=8.6.3", "pandas-stubs>=2.0.2.230605", "pynvim>=0.5.2"]

[project.scripts]
benchmark-os = "analyze.benchmark.os:main"
benchmark-bm = "analyze.benchmark.bm:main"
metrics = "analyze.utils.metrics:main"
plot-issues = "analyze.plot.issues:main"
plot-metrics = "analyze.plot.metrics:main"
plot-metrics-dyn = "analyze.plot.metrics_dyn:main"
plot-motor-characteristics = "analyze.plot.motor_characteristics:main"
plot-so-survey = "analyze.plot.so_survey:main"
plot-square-wave = "analyze.plot.square_wave:main"
plot-top-tags = "analyze.plot.top_tags:main"
plot-all = "analyze.plot.all:main"
survey-render = "analyze.notebooks.survey:render"
survey-preview = "analyze.notebooks.survey:preview"
