[workspace]
resolver = "3"
members = ["1-blinky", "2-motor", "3-pid"]

[profile.dev]
# debug = true    # Symbols are nice and they don't increase the size on Flash
# opt-level = "z"

[profile.release]
strip = true

[profile.fast]
inherits = "release"
opt-level = 3

[profile.small]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
# https://github.com/johnthagen/min-sized-rust

[workspace.metadata.cross.build.env]
passthrough = ["REVOLUTION_THRESHOLD_CLOSE", "REVOLUTION_THRESHOLD_FAR"]
