[workspace]

[package]
edition = "2021"
name = "motor-bm"
version = "0.1.0"

[[bin]]
name = "2-motor-bm"
path = "./src/bin/main.rs"

[dependencies]
esp-backtrace = { version = "0.15.1", features = [
  "esp32",
  "println",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32", "unstable"] }
esp-println = { version = "0.13.1", features = ["auto"] }
thiserror-no-std = "2.0.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
