[workspace]

[package]
name = "motor"
version = "0.1.0"
authors = ["Jakub Ostrzołek <kubaostrzolek@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "2-motor-bm"
path = "src/main.rs"
harness = false      # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.release]
strip = true

[profile.fast]
inherits = "release"
opt-level = 3

[profile.small]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
  "critical-section",
  "embassy-time-driver",
  "embassy-sync",
] }
esp-idf-hal = { version = "0.45.2" }
anyhow = "1.0.97"
esp-idf-sys = "0.36.1"

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "clk.h"
