[workspace]

[package]
name = "pid"
version = "0.1.0"
authors = ["Jakub Ostrzołek <kubaostrzolek@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "3-pid-bm"
path = "src/main.rs"
harness = false      # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
  "critical-section",
  "embassy-time-driver",
  "embassy-sync",
] }
esp-idf-hal = { version = "0.45.2" }
anyhow = "1.0.97"
embedded-svc = "0.28.1"
esp-idf-sys = "0.36.1"
num-derive = "0.4.2"
num-traits = "0.2.19"

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-modbus", version = "1.0" }
bindings_header = "modbus.h"
bindings_module = "modbus"
